--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-gems:
-  - jekyll-roman
+plugins:
+  - jekyll-time-to-read
   
